--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TFM FLOWERS 🌸</title>
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
+
         body {
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
             background: #fffaf0;
             color: #333;
         }
+
         header {
             background: linear-gradient(to right, #ff9a9e, #fad0c4);
             color: #fff;
             text-align: center;
             padding: 60px 20px;
         }
+
         header h1 { font-size: 3em; margin-bottom: 10px; }
         header p { font-size: 1.3em; opacity: 0.9; }
 
         main { max-width: 1100px; margin: auto; padding: 40px 20px; }
-        section { margin-bottom: 60px; }
+        section { margin-bottom: 70px; }
 
         h2 {
             color: #ff6f91;
@@ -52,33 +56,20 @@
             box-shadow: 0 10px 15px rgba(0,0,0,0.15);
         }
 
-        .upload-section {
+        /* Sección Space */
+        .space-section {
             background: #ffe4e1;
             padding: 40px 20px;
             border-radius: 12px;
-            text-align: center;
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
 
-        .upload-section input {
-            margin-top: 15px;
-        }
-
-        .upload-section button {
-            margin-top: 15px;
-            padding: 12px 25px;
-            font-size: 1em;
-            background: #ff6f91;
-            color: #fff;
+        .space-section iframe {
+            width: 100%;
+            height: 850px;
             border: none;
-            border-radius: 8px;
-            cursor: pointer;
-        }
-
-        #result {
-            margin-top: 20px;
-            font-size: 1.2em;
-            color: #ff3b6f;
+            border-radius: 12px;
+            background: white;
         }
 
         footer {
@@ -102,8 +93,10 @@
 <section>
     <h2>Acerca del proyecto</h2>
     <p>
-        Este proyecto identifica automáticamente <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>
-        usando un modelo entrenado con <strong>Fastai</strong>.
+        Este proyecto identifica automáticamente
+        <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>
+        mediante un modelo de <strong>Deep Learning</strong> entrenado con
+        <strong>Fastai</strong> y desplegado en producción.
     </p>
 </section>
 
@@ -125,16 +118,25 @@
     </div>
 </section>
 
-<section class="upload-section">
-    <h2>Prueba el modelo</h2>
+<section class="space-section">
+    <h2>🔍 Demostrador interactivo</h2>
 
-    <input type="file" id="fileInput" accept="image/*">
-    <br>
-    <button id="predictBtn">Predecir Flor</button>
+    <p>
+        A continuación se muestra el demostrador del modelo desplegado en
+        <strong>Hugging Face Spaces</strong>, plataforma especializada en
+        inferencia de modelos de Machine Learning.
+        Puedes subir una imagen y analizarla en tiempo real.
+    </p>
 
-    <p id="result"></p>
+    <iframe
+        src="https://huggingface.co/spaces/Santonla/FLOWERS"
+        loading="lazy">
+    </iframe>
 
-    <img id="previewImg" style="max-width:300px; display:none; margin-top:20px; border-radius:10px;">
+    <p style="margin-top:15px; font-size:0.95em; color:#555;">
+        Nota: El demostrador se ejecuta en un entorno externo optimizado para
+        inferencia. Los resultados dependen de la calidad y el encuadre de la imagen.
+    </p>
 </section>
 
 </main>
@@ -152,48 +154,11 @@
         pagination: { el: '.swiper-pagination' },
         navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' }
     });
-
-    const fileInput = document.getElementById("fileInput");
-    const previewImg = document.getElementById("previewImg");
-    const resultDiv = document.getElementById("result");
-
-    fileInput.addEventListener("change", () => {
-        const file = fileInput.files[0];
-        if (!file) return;
-        previewImg.src = URL.createObjectURL(file);
-        previewImg.style.display = "block";
-        resultDiv.textContent = "";
-    });
-
-    document.getElementById("predictBtn").addEventListener("click", async () => {
-        if (!fileInput.files[0]) {
-            alert("Selecciona una imagen");
-            return;
-        }
-
-        resultDiv.textContent = "Prediciendo...";
-
-        const formData = new FormData();
-        formData.append("file", fileInput.files[0]);
-
-        try {
-            // 🔴 CUANDO TENGAS HUGGING FACE, CAMBIA SOLO ESTA URL
-            const response = await fetch("https://TU-SPACE.hf.space/predict", {
-                method: "POST",
-                body: formData
-            });
-
-            const data = await response.json();
-            resultDiv.textContent = `La flor es: ${data.prediction} 🌸`;
-
-        } catch (e) {
-            // ✅ Fallback público (demo)
-            const demo = ["Rosa", "Tulipán", "Narciso", "Girasol", "Diente de león"];
-            const random = demo[Math.floor(Math.random() * demo.length)];
-            resultDiv.textContent = `🌼 Demo pública → Flor detectada: ${random}`;
-        }
-    });
 </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
