--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
     .swiper-slide { display:flex; justify-content:center; }
     .swiper-slide img { width:50%; border-radius:12px; box-shadow:0 10px 15px rgba(0,0,0,0.15); }
 
-    /* Space iframe */
-    .space-section iframe { width:100%; height:850px; border:none; border-radius:12px; background:white; }
+    /* Botón demo */
+    .demo-btn {
+        display:inline-block;
+        padding:12px 25px;
+        background:#ff6f91;
+        color:white;
+        border-radius:8px;
+        text-decoration:none;
+        font-size:1em;
+        transition:0.3s;
+    }
+    .demo-btn:hover { background:#ff3b6f; }
 
     footer { background:#ff6f91; color:white; text-align:center; padding:25px 20px; margin-top:40px; }
 
@@ -86,9 +96,9 @@
             Puedes probar el modelo de clasificación en tiempo real mediante el
             demostrador desplegado en <strong>Hugging Face Spaces</strong>.
         </p>
-        <div class="space-section">
-            <iframe src="https://huggingface.co/spaces/Santonla/FLOWERS" loading="lazy"></iframe>
-        </div>
+        <a href="https://huggingface.co/spaces/Santonla/FLOWERS" target="_blank" class="demo-btn">
+            Abrir demostrador
+        </a>
         <p style="margin-top:15px; font-size:0.95em; color:#555;">
             Nota: El demostrador se ejecuta en un entorno externo optimizado para
             inferencia. Los resultados dependen de la calidad y el encuadre de la imagen.
@@ -98,6 +108,7 @@
 
 <footer>
     <p>TFM FLOWERS &copy; 2025</p>
+    <p>👀 Visitas totales: <span id="visit-count">cargando...</span></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -121,7 +132,19 @@
             document.getElementById(tab.dataset.tab).classList.add('active');
         });
     });
+
+    // Contador de visitas (CountAPI)
+    fetch('https://api.countapi.xyz/hit/santonla-tfmflowers/visitas')
+      .then(res => res.json())
+      .then(data => {
+        document.getElementById('visit-count').textContent = data.value;
+      })
+      .catch(err => {
+        console.error('Error al actualizar contador:', err);
+        document.getElementById('visit-count').textContent = 'N/A';
+      });
 </script>
 
 </body>
 </html>
+
