--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     header h1 { font-size:3em; margin-bottom:10px; }
     header p { font-size:1.3em; opacity:0.9; }
 
+    #visit-header { font-size:1.5em; margin-top:15px; font-weight:bold; color:#ff3b6f; }
+
     nav { display:flex; justify-content:center; gap:20px; margin-bottom:30px; }
     nav button {
         background:#ff6f91; color:white; border:none; padding:12px 25px; border-radius:8px; cursor:pointer; font-size:1em;
@@ -56,6 +58,11 @@
 <header>
     <h1>TFM FLOWERS 🌸</h1>
     <p>Clasificación de flores con Deep Learning y Fastai</p>
+    
+    <!-- Contador de visitas -->
+    <div id="visit-header">
+        👀 Visitas totales: <span id="visit-count">cargando...</span>
+    </div>
 </header>
 
 <nav>
@@ -108,7 +115,6 @@
 
 <footer>
     <p>TFM FLOWERS &copy; 2025</p>
-    <p>👀 Visitas totales: <span id="visit-count">cargando...</span></p>
 </footer>
 
 <!-- Swiper JS -->
@@ -147,7 +153,7 @@
       storageBucket: "flowers-1d33a.firebasestorage.app",
       messagingSenderId: "850998617796",
       appId: "1:850998617796:web:068370ca8a9a8984d00b91",
-      databaseURL: "https://flowers-1d33a-default-rtdb.firebaseio.com" // añadir URL Realtime Database
+      databaseURL: "https://flowers-1d33a-default-rtdb.firebaseio.com"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
@@ -162,5 +168,6 @@
 
 </body>
 </html>
+
 
 
