--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <style>
     * { margin:0; padding:0; box-sizing:border-box; }
     body { font-family: 'Roboto', sans-serif; line-height:1.6; background:#fffaf0; color:#333; }
+    
     header { background:linear-gradient(to right,#ff9a9e,#fad0c4); color:#fff; text-align:center; padding:60px 20px; }
     header h1 { font-size:3em; margin-bottom:10px; }
     header p { font-size:1.3em; opacity:0.9; }
-
-    #visit-header { font-size:1.5em; margin-top:15px; font-weight:bold; color:#ff3b6f; }
+    #visit-header { font-size:1.5em; margin:20px 0; font-weight:bold; color:#ff3b6f; }
 
     nav { display:flex; justify-content:center; gap:20px; margin-bottom:30px; }
     nav button {
@@ -50,7 +50,6 @@
     .demo-btn:hover { background:#ff3b6f; }
 
     footer { background:#ff6f91; color:white; text-align:center; padding:25px 20px; margin-top:40px; }
-
 </style>
 </head>
 <body>
@@ -59,9 +58,9 @@
     <h1>TFM FLOWERS 🌸</h1>
     <p>Clasificación de flores con Deep Learning y Fastai</p>
     
-    <!-- Contador de visitas -->
+    <!-- Contador tipo bienvenida -->
     <div id="visit-header">
-        👀 Visitas totales: <span id="visit-count">cargando...</span>
+        Bienvenido, eres el visitante nº <span id="visit-count">cargando...</span>
     </div>
 </header>
 
@@ -158,7 +157,7 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Contador de visitas
+    // Contador tipo bienvenida
     const visitRef = db.ref('visitas_totales');
     visitRef.transaction(current => (current || 0) + 1);
     visitRef.on('value', snapshot => {
@@ -168,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
