--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     header { background:linear-gradient(to right,#ff9a9e,#fad0c4); color:#fff; text-align:center; padding:60px 20px; }
     header h1 { font-size:3em; margin-bottom:10px; }
     header p { font-size:1.3em; opacity:0.9; }
-    #visit-header { font-size:1.5em; margin:20px 0; font-weight:bold; color:#ff3b6f; }
+
+    #visit-header {
+        font-size:1.8em;
+        margin:20px 0;
+        font-weight:bold;
+        color:#ff3b6f;
+        text-align:center;
+        line-height:1.2;
+    }
 
     nav { display:flex; justify-content:center; gap:20px; margin-bottom:30px; }
     nav button {
@@ -57,12 +65,12 @@
 <header>
     <h1>TFM FLOWERS 🌸</h1>
     <p>Clasificación de flores con Deep Learning y Fastai</p>
-    
-    <!-- Contador tipo bienvenida -->
-    <div id="visit-header">
-        Bienvenido, eres el visitante nº <span id="visit-count">cargando...</span>
-    </div>
 </header>
+
+<!-- Contador de visitas tipo bienvenida justo encima de los botones -->
+<div id="visit-header">
+    Bienvenido, eres el visitante nº <span id="visit-count">cargando...</span>
+</div>
 
 <nav>
     <button class="tab-btn active" data-tab="inicio">Inicio</button>
@@ -157,16 +165,19 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Contador tipo bienvenida
-    const visitRef = db.ref('visitas_totales');
-    visitRef.transaction(current => (current || 0) + 1);
-    visitRef.on('value', snapshot => {
-        document.getElementById('visit-count').textContent = snapshot.val();
+    // Contador tipo bienvenida: se ejecuta cuando la página carga
+    window.addEventListener('DOMContentLoaded', () => {
+        const visitRef = db.ref('visitas_totales');
+        visitRef.transaction(current => (current || 0) + 1);
+        visitRef.on('value', snapshot => {
+            document.getElementById('visit-count').textContent = snapshot.val();
+        });
     });
 </script>
 
 </body>
 </html>
+
 
 
 
