--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <!-- Contador de visitas tipo bienvenida justo encima de los botones -->
 <div id="visit-header">
-    Bienvenido, eres el visitante nº <span id="visit-count">cargando...</span>
+    Bienvenido, eres la visita nº <span id="visit-count">cargando...</span>
 </div>
 
 <nav>
