--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h2>Acerca del proyecto</h2>
         <p>
             Este proyecto identifica automáticamente
-            <strong>Rosa, Tulipán, Narciso, Girasol y Diente de león</strong>
+            <strong>Rosa, Tulipán, Margarita, Girasol y Diente de león</strong>
             mediante un modelo de <strong>Deep Learning</strong> entrenado con
             <strong>Fastai</strong>.
         </p>
@@ -93,7 +93,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="imagenes/rosa1024.jpg"></div>
                 <div class="swiper-slide"><img src="imagenes/tulipan1024.jpg"></div>
-                <div class="swiper-slide"><img src="imagenes/narciso1024.jpg"></div>
+                <div class="swiper-slide"><img src="imagenes/margarita1024.jpg"></div>
                 <div class="swiper-slide"><img src="imagenes/girasol1024.jpg"></div>
                 <div class="swiper-slide"><img src="imagenes/dientedeleon1024.jpg"></div>
             </div>
